--- a/index.html
+++ b/index.html
@@ -10,14 +10,29 @@
 </head>
 
 <body>
-  <header class="header">
+  <div class="container">
     <div class="title">
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
-
-  </header>
+    <div class="pic">
+        <picture>
+        <source srcset="
+        images/museum-320.jpg,
+        images/museum.480.jpg 1.5x,
+        images/museum.720.jpg 2x,
+        images/museum.960.jpg 3x" media="(min-width:320px)">
+        
+        <source srcset="
+        images/museum.1280.jpg,
+        images/museum.1600.jpg 1.5x,
+        images/museum.2160.jpg 2x,
+        images/museum.2880.jpg 3x" media="(min-width:960px)">
+      
+        <img src="images/museum.jpg" alt="museum picture">
+      </picture>
+    </div>
+  </div>
 </body>
 
 </html>
